--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ h2 {
 
 .clientsFeedback .clients {
     width: 500px;
-    height: 500px;
+    height: auto;
     border: 3px solid #006B6A;
      margin: 20px;
 }
